Fix text alignment issue

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 body,
@@ -43,7 +43,7 @@ main {
 
 .location {
   display: flex;
-  font-size: 75px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -56,14 +56,14 @@ main {
   display: flex;
   flex-direction: row;
   gap: 15px;
-  font-size: 45px;
+  font-size: 30px;
   font-weight: lighter;
 }
 
 .wrap2 {
   display: flex;
   gap: 20px;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: lighter;
   opacity: 80%;
 }
